# storage/api-docs/api-docs.json
@@ -19,130 +19,6 @@
         }
     ],
     "paths": {
-        "/notifications": {
-            "get": {
-                "tags": [
-                    "Notifications"
-                ],
-                "summary": "Get user notifications",
-                "operationId": "App\\Http\\Controllers\\Account\\NotificationController::getNotifications",
-                "responses": {
-                    "401": {
-                        "description": "Authorization required"
-                    }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
-            },
-            "patch": {
-                "tags": [
-                    "Notifications"
-                ],
-                "summary": "Update user notification status",
-                "operationId": "App\\Http\\Controllers\\Account\\NotificationController::mark",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "query",
-                        "description": "IDs of notifications",
-                        "required": true,
-                        "schema": {
-                            "type": "array",
-                            "items": {}
-                        }
-                    },
-                    {
-                        "name": "status",
-                        "in": "query",
-                        "description": "Either of read or unread",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful"
-                    },
-                    "401": {
-                        "description": "Authorization required"
-                    }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
-            }
-        },
-        "/notifications/{id}": {
-            "delete": {
-                "tags": [
-                    "Notifications"
-                ],
-                "summary": "Delete user notification",
-                "operationId": "App\\Http\\Controllers\\Account\\NotificationController::delete",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID of notification",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful"
-                    },
-                    "401": {
-                        "description": "Authorization required"
-                    }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
-            },
-            "patch": {
-                "tags": [
-                    "Notifications"
-                ],
-                "summary": "Toggle user notification status",
-                "operationId": "App\\Http\\Controllers\\Account\\NotificationController::toggle",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID of notification",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful"
-                    },
-                    "401": {
-                        "description": "Authorization required"
-                    }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
-            }
-        },
         "/user": {
             "patch": {
                 "tags": [
@@ -170,54 +46,9 @@
                         }
                     },
                     {
-                        "name": "other_names",
-                        "in": "query",
-                        "description": "Other Name of User",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
                         "name": "email",
                         "in": "query",
                         "description": "Email of User",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "username",
-                        "in": "query",
-                        "description": "Username of the user",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "phone",
-                        "in": "query",
-                        "description": "Phone of the user",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "gender",
-                        "in": "query",
-                        "description": "Gender of the User",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "address",
-                        "in": "query",
-                        "description": "Address of the User",
                         "required": true,
                         "schema": {
                             "type": "string"
@@ -378,7 +209,7 @@
                 "operationId": "App\\Http\\Controllers\\Auth\\AuthController::login",
                 "parameters": [
                     {
-                        "name": "email_or_username",
+                        "name": "email",
                         "in": "query",
                         "description": "User's email or username",
                         "required": true,
@@ -444,28 +275,10 @@
                         }
                     },
                     {
-                        "name": "other_names",
-                        "in": "query",
-                        "description": "Other Name of User",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
                         "name": "email",
                         "in": "query",
                         "description": "Email of User",
                         "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "username",
-                        "in": "query",
-                        "description": "Username of the user",
-                        "required": false,
                         "schema": {
                             "type": "string"
                         }
@@ -483,24 +296,6 @@
                         "name": "password_confirmation",
                         "in": "query",
                         "description": "Password Confirmation",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "phone",
-                        "in": "query",
-                        "description": "Phone of the user",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "terms",
-                        "in": "query",
-                        "description": "Terms and condition ",
                         "required": true,
                         "schema": {
                             "type": "string"
@@ -667,6 +462,113 @@
                         }
                     }
                 }
+            }
+        },
+        "/plans": {
+            "get": {
+                "tags": [
+                    "Plan"
+                ],
+                "summary": "Get all plans",
+                "operationId": "App\\Http\\Controllers\\SubscriptionController::index",
+                "responses": {
+                    "200": {
+                        "description": "Successful",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Error: Forbidden",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
+        "/plans/{plan_id}": {
+            "get": {
+                "tags": [
+                    "Plan"
+                ],
+                "summary": "Choose a plan",
+                "operationId": "App\\Http\\Controllers\\SubscriptionController::choosePlan",
+                "responses": {
+                    "200": {
+                        "description": "Successful",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Error: Forbidden",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
+        "/plans/payments/verify": {
+            "post": {
+                "tags": [
+                    "Plan"
+                ],
+                "summary": "Verify Payment Made",
+                "operationId": "App\\Http\\Controllers\\SubscriptionController::verifyPayment",
+                "parameters": [
+                    {
+                        "name": "ref",
+                        "in": "query",
+                        "description": "Reference from paystack",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Error: Forbidden",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
             }
         }
     },
